<resources>
    <string name="app_name">LifeStep</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main">Əsas</string>
    <string name="monday">B.e</string>
    <string name="tuesday">Ç.a</string>
    <string name="wednesday">Çər</string>
    <string name="thursday">C.a</string>
    <string name="friday">C</string>
    <string name="saturday">Şən</string>
    <string name="sunday">Baz</string>
    <string name="today">Bu gün cəmi</string>
    <string name="steps">addım atmısan</string>
    <string name="auth_title">Ümidə\natılan ilk\naddım</string>
    <string name="login">Giriş</string>
    <string name="name_surname">Ad, Soyad</string>
    <string name="password">Şifrə</string>
    <string name="forgot_password">Şifrəni unutmusan?</string>
    <string name="register">Qeydiyyat</string>
    <string name="email">Email</string>
    <string name="phone">Telefon nömrəsi</string>
    <string name="password_again">Şifrənin təkrarı</string>
    <string name="have_account">Hesabın var?</string>
    <string name="converted_steps">Çevrilən\naddım</string>
    <string name="converted_steps_count">1236</string>
    <string name="kilometer">Kilometr</string>
    <string name="unconverted_steps">Çevrilməyən\naddım</string>
    <string name="calorie">Kalori</string>
    <string name="convert_life_step">LifeStep addıma çevir</string>
    <string name="coming_to_you">Sizə doğru gəlirik</string>
    <string name="circles">Dərnəklər</string>
    <string name="spend_step">Addımı xərclə</string>
    <string name="marathon">Marafon</string>
    <string name="donate_step">Addım bağışla</string>
    <string name="total_lifesteps">Mövcud cəmi LifeStep addım</string>
    <string name="converted">Çevrilən</string>
    <string name="donated">Bağışlanan</string>
    <string name="transfered">Transfer edilən</string>
    <string name="bonus">Bonus</string>
    <string name="earned">Qazanılan AZN</string>
    <string name="balance">Balans</string>
    <string name="earned_steps">Transfer ilə alınan</string>
    <string name="earn_steps">Addım qazan</string>
    <string name="title_watch_ads">Reklam izlə 200 addım qazan!</string>
    <string name="body_watch_ads">Bu bölmədə siz Google reklamlarını izləməklə hər izlədiyiniz reklama görə 200 addım qazanmış olacaqsınız. İstədiyiniz qədər reklam izləyib addım qazana bilərsiniz. Yardım etmək bax bu qədər asandır !</string>
    <string name="watch_ads">Reklam izlə</string>
    <string name="settings">Tənzimləmələr</string>
    <string name="text_profile">Profilim</string>
    <string name="text_invite_friend">Dostunu\ndəvət et</string>
    <string name="text_history">Tarixçə</string>
    <string name="text_contact">Bizimlə\nəlaqə</string>
    <string name="language_selection">Dil seçimi</string>
    <string name="about_us">Haqqımızda</string>
    <string name="logout">Çıxış</string>
    <string name="lorem_impuls">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tellus nunc, nunc, sit aliquet hac sit et neque. Dignissim porttitor lacus imperdiet viverra tincidunt risus justo, condimentum fermentum. Eu viverra urna ipsum mi pellentesque id risus egestas. Id metus, malesuada tincidunt nisi et ornare. Eu nunc imperdiet etiam pellentesque mauris</string>
    <string name="text_address_contact">Dilarə Əliyeva 185C</string>
    <string name="text_phone_home_contact">+994 12 456 65 56</string>
    <string name="text_phone_contact">+994 50 201 06 10</string>
    <string name="text_email_contact">info@lifestep.az</string>
    <string name="title_contact">Bizimlə əlaqə</string>
    <string name="body_invite_friend">1. Dəvət kodunu dostuna göndər \n2. Dostun LifeStep-də qeydiyyatdan keçsin və sənin dəvət kodunu daxil etsin \n3. 50 000 LifeStep addım qazan</string>
    <string name="your_invitation_code">Sizin dəvət kodunuz</string>
    <string name="send_invitation">Dəvətnamə göndər</string>
    <string name="invite_friend_title">Dostunu dəvət et</string>
    <string name="az_lang">Azərbaycan dili</string>
    <string name="en_lang">İngilis dili</string>
    <string name="ru_lang">Rus dili</string>
    <string name="text_friends_title">Dostlarım</string>
    <string name="champions">Çempionlar</string>
    <string name="title_donated">Bağışladıqlarım</string>
    <string name="title_transfered">Transferlərim</string>
    <string name="title_earned">Qazandıqlarım</string>
    <string name="text_detailed_info">Ətraflı məlumat</string>
    <string name="donated_steps">Bağışlanan addım</string>
    <string name="target_steps">Hədəf addım</string>
    <string name="last_date_for_help">Dəstək üçün son tarix</string>
    <string name="all">Hamısı</string>
    <string name="step_donors">Addım bağışlayanlar</string>
    <string name="profile_details">Profil məlumatları</string>
    <string name="code">Dəvət kodu</string>
    <string name="save">Yadda saxla</string>
    <string name="notifications">Bildirişlər</string>
    <string name="daily">Günlük</string>
    <string name="monthly">Aylıq</string>
    <string name="addım" />
    <string name="step">addım</string>
    <string name="send_friendship">Dostluq göndər</string>
    <string name="send_step">Addım göndər</string>
    <string name="desired_steps_count_donate">Bağışlamaq istədiyiniz\naddım sayı</string>
    <string name="text_view_last_step">Həyat bağışlamaq üçün son addım</string>
    <string name="show_name_image">Adım və şəklim göstərilməsin</string>
    <string name="donate">Bağışla</string>
    <string name="thanks">Təşəkkür edirik !</string>
    <string name="quote_donation">Siz, həyat bağışlamanın bir\nparçası oldunuz</string>
    <string name="confirm">Təsdiqlə</string>
    <string name="confirm_account">Hesabı təsdiqlə</string>
    <string name="confirm_account_instruction">Zəhmət olmasa e-mailinizə gələn\n4 rəqəmli kodu daxil edin</string>
    <string name="forgot_password_instruction">Narahat olma, aşağıda e-mailini daxil\net təsdiq kodunu e-mailinə göndərək</string>
    <string name="try_again_later">30 saniyə sonra yenidən cəhd edin</string>
    <string name="create_password">Yeni şifrə yarat</string>
    <string name="create_password_instructions">Zəhmət olmasa hesabınızı qorumaq\nüçün şifrənizi heç kimlə paylaşmayın</string>
    <string name="show">Göstər</string>
    <string name="refresh_password">Şifrəni yenilə</string>

    <string name="invalid_fullname">Ad Soyad daxil edin</string>
    <string name="invalid_pin_code">Pin doğru deyil</string>
    <string name="invalid_email">E-mail doğru deyil</string>
    <string name="invalid_phone">Telefon nömrəsi daxil edin</string>
    <string name="invalid_password">Parol uyğun deyil, Minimum-6</string>
    <string name="invalid_password_confirm">Parolu tesdiqləyin</string>
    <string name="not_same_passwords">Daxil ediən parollar eyni deyil</string>
    <string name="preference_file_key">shared_preferences</string>
    <string name="back">Geriyə</string>
    <string name="gender">Cinsiyyət</string>
    <string name="invitation_code">Dəvət kodu</string>
    <string name="invalid_name">Ad uyğun deyil</string>
    <string name="invalid_surname">Soyad uyğun deyil</string>
    <string name="invalid_gender">Cinsiyyət uyğun deyil</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="loading_txt">Yüklənir</string>
    <string name="sorry">Təəssüf edirik</string>
    <string name="close">Bağla</string>
    <string name="person">nəfər</string>

    <string-array name="genders">
        <item>Kişi</item>
        <item>Qadın</item>
    </string-array>

    <string name="friends_count">%1s nəfər</string>
    <string name="friends_balance">%1s addım</string>

    <string name="text_friends">Dostlarım\n%1s nəfər</string>
    <string name="my_friends">Dostlarım (%1s)</string>
    <string name="friend_requests">Dostluq təkliflərim (%1s)</string>
    <string name="decline">Imtina et</string>
    <string name="accept">Qəbul et</string>
    <string name="hide">Gizlət</string>
    <string name="join_date_text">%1s tarixində qoşulub</string>
    <string name="two_lined_format">%1$s\n%2$s</string>
    <string name="total_steps">cəmi addım</string>
    <string name="friends">dostlar</string>
    <string name="preparing">Hazırlanır</string>
    <string name="sharing_method">Paylaşma yolunu seçin</string>
    <string name="user_info">Istifadəçi məlumatları</string>
    <string name="desired_steps_count_send">Göndərmək istədiyiniz\naddım sayı</string>
    <string name="send">Göndər</string>

    <string name="device_id_error_message">Cihazla əlaqəli xəta</string>
    <string name="search">Axtar</string>
    <string name="install">Yüklə</string>
    <string name="life_steps">LifeSteps</string>
    <string name="more">Daha çox</string>
    <string name="search_results">Axtarış Nəticələri</string>

    <string name="full_name_singleline">%1s %2s</string>
    <string name="congrats">Təbriklər</string>
    <string name="quote_congrats_bonus">200 Bonus addım qazandınız</string>

    <string name="google_auth_fail_message">Google Fit hesabınızı qoşmalısınız</string>

    <string name="no_internet_connection">Internet əlaqəsi yoxdur</string>
    <string name="remaining">saniyə qaldı</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Qaleriyya</string>
    <string name="choose_image">Şəkil seçin</string>

    <string-array name="calcalationSuffixes">
        <item>min</item>
        <item>mln</item>
        <item>mly</item>
        <item>trl</item>
    </string-array>

    <string-array name="championsPageTabs">
        <item>Günün çempionları</item>
        <item>Həftənin çempionları</item>
        <item>Ayın çempionları</item>
    </string-array>

    <!-- Strings used for fragments for navigation -->
</resources>
