<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="az.rabita.lifestep.viewModel.fragment.login.LoginViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="35dp"
        android:weightSum="4"
        tools:context=".ui.fragment.login.LoginFragment">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/login"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_gray_text_color"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingBottom="20dp"
                android:text="@={viewModel.emailInput}"
                android:textAppearance="@style/authenticationInputTextAppearance"
                android:textColorHint="@color/gray_text_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/edit_text_bottom_line_color"
                android:fontFamily="@font/gilroy_medium"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:text="@={viewModel.passwordInput}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_forgot_password"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_semibold"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/bottom_navigation_view_color" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_register"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_semibold"
                android:onClick="@{()->viewModel.onToRegisterButtonClick()}"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/main_text_color" />

        </LinearLayout>

    </LinearLayout>

</layout>